--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 discord.py==0.16.12
 aiohttp
-websockets
-chardet
+discord
+from discord.ext import commands
+random
+requests
+aiohttp
+requests
+pynite
+BeautifulSoup
