--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
 discord.py==0.16.12
 aiohttp
-discord
-from discord.ext import commands
-random
-requests
-aiohttp
-requests
-pynite
-BeautifulSoup
+chardet
